styles.css
body {
    background-color:#dae2e4;
    margin-top: 70px; /* Add a top margin to avoid content overlay */
    z-index:2;
}

.btn{
    margin-left:10px;
 }

.navbar {
    position: fixed; /* Set the navbar to fixed position */
    top: 0; /* Position the navbar at the top of the page */
    width: 100%; /* Full width */
    z-index:4;
  }

.homepage {
    margin-left: 40px; /* Add a left margin */
    margin-right: 40px; /* Add a left margin */
    margin-bottom: 40px; /* Add a bottom margin to avoid content overlay */
    width: 60rem;
}

.homepageHeader {
    width: 90%;
    margin-left: 40px; /* Add a left margin */
    margin-right: 40px; /* Add a left margin */
    width: 60rem;
}

.content {
  font-size: 2em;
  padding-top: 20%;
}

.card-img-top {
    width: 100%;
    height: 10vw;
    object-fit: cover;
}

.sidenav {
  height: 100%; /* 100% Full-height */
  width: 0; /* 0 width - change this with JavaScript */
  background-color: #111; /* Black*/
}

.btn-group {
  margin-left: 15px;
}

.all-time {
  color: blue;
}

footer {
  margin-left: 10px; /* Add a left margin */
}

#toTopBtn {
    display: none; /* Hidden by default */
    position: fixed; /* Fixed/sticky position */
    bottom: 20px; /* Place the button at the bottom of the page */
    right: 20px; /* Place the button 20px from the right */
    z-index: 99; /* Make sure it does not overlap */
    border: none; /* Remove borders */
    outline: none; /* Remove outline */
    background-color: white; /* Set a background color */
    color: blue; /* Text color */
    cursor: pointer; /* Add a mouse pointer on hover */
    padding: 15px; /* Some padding */
    border-radius: 10px; /* Rounded corners */
    font-size: 16px; /* Increase font size */
}

